# machine-learning

./: README.md
ANN/: README.md
ARIMA/: README.md
CNN/: README.md
LDA/: README.md
LSTM/: README.md
PCA/: README.md
RNN/: README.md
association-rules/: RENAME.md
customer_churn/: README.md  databricks.yml  pyproject.toml
customer_churn/resources/: scheduled_job.yml
customer_churn/src/: customer-churn.ipynb
customer_churn/src/churn_model/: calculate_churn.ipynb  churn_model.ipynb  config.ipynb  engineer_features.ipynb  ignore_test_customer_ids.ipynb  utilities.ipynb  validate_model.ipynb
customer_churn/tests/: churn_test.py
decision-tree/: README.md
gaussian-mixture-models/: README.md
gradient-boosted-model/: README.md
hidden-markov-models/: README.md
k-means/: README.md
k-nearest-neighbours/: README.md
lasso/: README.md
linear-programming/: README.md
linear-regression/: README.md
naive-bayes/: README.md
random-forest/: README.md
